--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,12 @@ subSecFont {
   font-size: 110%;
 }
 
+caption {
+  caption-side: bottom;
+  font-size: 80%;
+  font-style: italic;
+}
+
 h1, h2, h3 {
   font: normal 140% 'Droid Sans', arial, sans-serif;
   margin: 0 0 1em 0;
